# monoglint

./: CMakeLists.txt  CMakePresets.json
monoglint_engine/core/: core.hh
monoglint_engine/math/: math.hh
monoglint_engine/win/: win.cc  win.hh
src/: main.cc
